# ExercicesFiltersItk

./: CMakeLists.txt
FilterErodeBinaryImage/: CMakeLists.txt  FilterErodeItk.cxx  FilterErodeItk.xml
FilterErodeBinaryImage/Testing/: CMakeLists-noexternaldata.txt  CMakeLists.txt
FilterErodeBinaryImage/Testing/Data/: yingyang-erode3.png.md5  yingyang-erode4.png.md5  yingyang.png.md5
MedianFilterImage/: CMakeLists.txt  MedianFilterImage.cxx  MedianFilterImage.xml
OwnFilter/: CMakeLists.txt  MultiThreadImageFilter.cxx  MultiThreadImageFilter.h  MultiThreadImageFilter.hxx  MultiThreadImageFilter.xml
